--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="sass/main.css" type="text/css" />
+    <link rel="stylesheet" href="css/main.css"/>
     <title>Travel</title>
   </head>
   <body>
