--- a/index.html
+++ b/index.html
@@ -106,11 +106,11 @@
             
             <div class="pics">
               <div class="img--why_us tropic-village">
-                <img class="img" src="img/tropic-village.png" alt="">
+                <img class="img" src="img/tropic-village.png" alt="village">
 
               </div>
               <div class="img--why_us small-mountain">
-                <img class="img" src="img/bg-small.png" alt="">
+                <img class="img" src="img/bg-small.png" alt="mountain">
 
               </div>
               
@@ -202,7 +202,7 @@
         <h2 class="review__title">What Our  Tourist Say</h2>
         <div class="container container--f">
           <div class="img--review">
-            <img class="img" src="img/man-small.jpg" alt="">
+            <img class="img" src="img/man-small.jpg" alt="man">
           </div>
          <div class="review-card">
            <h2 class="review-card__name">
